actualiza index.html, agrega libreria sweetalert por cdn

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <p>Created by: Francisco Ramírez. ✌</p>
         </footer<>
 
-<script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="app.js"></script>
     
 </body>
 </html>
